[gd_scene load_steps=8 format=2]

[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=1]
[ext_resource path="res://MainMenu/Background.jpg" type="Texture" id=2]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenu/MainMenu_Joystick.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 25
extra_spacing_bottom = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[node name="MainMenu_Joystick" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 148.0
margin_top = 4.0
margin_right = 728.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
text = "Grave Harvest"
align = 1
valign = 1

[node name="Start2" type="Label" parent="."]
visible = false
margin_left = 700.0
margin_top = 412.0
margin_right = 900.0
margin_bottom = 472.0
custom_styles/normal = SubResource( 2 )

[node name="Start1" type="Label" parent="."]
margin_left = 684.0
margin_top = 380.0
margin_right = 916.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 3 )
text = "Start"
align = 1
valign = 1

[node name="Help2" type="Label" parent="."]
visible = false
margin_left = 200.0
margin_top = 495.0
margin_right = 350.0
margin_bottom = 585.0
custom_styles/normal = SubResource( 2 )

[node name="Help1" type="Label" parent="."]
margin_left = 160.0
margin_top = 476.0
margin_right = 392.0
margin_bottom = 601.0
custom_fonts/font = SubResource( 3 )
text = "Help"
align = 1
valign = 1

[node name="Stats2" type="Label" parent="."]
visible = false
margin_left = 700.0
margin_top = 500.0
margin_right = 880.0
margin_bottom = 560.0
custom_styles/normal = SubResource( 2 )

[node name="Stats1" type="Label" parent="."]
margin_left = 684.0
margin_top = 484.0
margin_right = 916.0
margin_bottom = 609.0
custom_fonts/font = SubResource( 3 )
text = "Stats
"
align = 1
valign = 1

[node name="MadeBy2" type="Label" parent="."]
visible = false
margin_left = 990.0
margin_top = 145.0
margin_right = 1170.0
margin_bottom = 245.0
custom_styles/normal = SubResource( 2 )

[node name="MadeBy1" type="Label" parent="."]
margin_left = 964.0
margin_top = 132.0
margin_right = 1196.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 3 )
text = "Made By"
align = 1
valign = 1

[node name="Quitt2" type="Label" parent="."]
visible = false
margin_left = 1000.0
margin_top = 13.0
margin_right = 1175.0
margin_bottom = 113.0
custom_styles/normal = SubResource( 2 )

[node name="Quitt1" type="Label" parent="."]
margin_left = 972.0
margin_right = 1204.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 3 )
text = "Quitt"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
